# hermes

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package.json  webpack.config.js
assets/: application.js  application.scss
migrations/2018-05-07-182344_create_channels/: down.sql  up.sql
migrations/2018-05-07-182344_create_feeds/: down.sql  up.sql
migrations/2018-05-11-122001_create_items/: down.sql  up.sql
migrations/2018-06-27-192416_add_content_to_items/: up.sql
migrations/2018-06-28-194948_create_user/: up.sql
migrations/2018-06-28-194948_create_users/: up.sql
migrations/2018-07-14-145752_create_subscribed_feeds/: up.sql
migrations/2018-07-14-145752_create_subscription/: up.sql
migrations/2018-08-08-183655_create_subscribed_items/: down.sql  up.sql
migrations/2018-08-22-093257_subscribed_feeds_with_count_view/: up.sql
migrations/2018-08-22-141034_subscribed_items_view/: up.sql
react-ui/: package.json
react-ui/src/: index.html  index.js  registerServiceWorker.js
react-ui/src/components/: AddFeed.js  App.js  FeedList.js  Feeds.js  ItemList.js  Items.js  Login.js  Main.js  Sidebar.js  SingleItem.js  TopBar.js  Topbar.js
react-ui/src/styles/: App.css  FeedList.css  Feeds.css  ItemList.css  Login.css  Main.css  Sidebar.css  SingleItem.css  TopBar.css
src/: bin.rs  db.rs  feed.rs  hermes.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs  template.rs  views.rs  web.rs
src/web/: handlers.rs  jwt.rs  mod.rs  rest.rs  types.rs  ws.rs
static/: 404.html
templates/: base.html  channel.html  index.html  item.html
templates/partials/: _channel.html  _item.html
ui/: .babelrc  .eslintrc.js  .gitignore  package.json  tsconfig.json  webpack.config.js
ui/src/: index.html  index.js
ui/src/components/: AddFeed.js  App.js  Forms.js  ItemList.js  ItemListItem.js  Login.js  Main.js  Settings.js  Sidebar.js  SingleItem.js  local_storage.js  store.js
ui/src/components/Elements/: index.js
ui/src/styles/: App.css  Main.css  Sidebar.css
vue/: .eslintrc.js  package.json  vue.config.js
vue/public/: index.html
vue/src/: App.vue  main.js
vue/src/components/: FeedChannel.vue  FeedItem.vue  FeedItems.vue  FeedList.vue  FeedView.vue  Index.vue  Jwt.vue  Login.vue  Sidebar.vue  TopBar.vue
vue/src/modules/: UserAuth.js
vue/src/router/: index.js
vue/src/store/: UserAuth.js  index.js
(+9 files in other folders)
