[package]
name = "feeds"
version = "0.1.0"
authors = ["richard <richard@radagast.nu>"]

[dependencies]
base64 = ""
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "1.3.2", features = ["postgres", "chrono"] }
dotenv = "0.13.0"
futures = "0.1"
hyper = "0.12.5"
hyper-tls = ""
jsonwebtoken = "4.0.1"
lazy_static = "1.0"
log = "0.4.0"
num_cpus = "1.8.0"
pretty_env_logger = "0.2.4"
r2d2 = ""
r2d2-diesel = ""
regex = "1.0.0"
rss = "1.5.0"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.22"
sha2 = ""
tokio = "0.1"
tokio-fs = "0.1"
tokio-io = "0.1"
url = "1.7.0"

[lib]
name = "feeds_lib"
path = "src/lib.rs"

[[bin]]
name = "feeds"
path = "src/bin.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"
