[package]
name = "feeds"
version = "0.1.0"
authors = ["richard <richard@radagast.nu>"]

[dependencies]
atom_syndication = "0.6"
base64 = ""
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "1.3.2", features = ["postgres", "chrono"] }
dotenv = "0.13.0"
failure = ""
futures = "0.1"
hyper = "0.12.8"
hyper-tls = "0.3.0"
jsonwebtoken = "5.0.0"
lazy_static = "1.0"
log = "0.4.0"
num_cpus = "1.8.0"
pretty_env_logger = "0.2.4"
quick-xml = "0.12.1"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
regex = "1.0.0"
rss = "1.5.0"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.22"
sha2 = "0.7"
tokio = "0.1"
tokio-fs = "0.1"
tokio-io = "0.1"
url = "1.7.0"
warp = ""

[lib]
name = "feeds_lib"
path = "src/lib.rs"

[[bin]]
name = "feeds"
path = "src/bin.rs"

[[bin]]
name = "add_user"
path = "src/bin/add_user.rs"
